--- a/index.html
+++ b/index.html
@@ -12,24 +12,19 @@
     <main>
 
         <div id="block1">
-            <h1>IT</h1>
-        </div>
+            <h1>IT</h1></div>
 
         <div id="block2">
-            <h1>A</h1>
-        </div>
+            <h1>A</h1></div>
 
         <div id="block3">
-            <h1>CA</h1>
-        </div>
+            <h1>CA</h1></div>
 
         <div id="block4">
-            <h1>DE</h1>
-        </div>
+            <h1>DE</h1></div>
 
         <div id="block5">
-            <h1>MY&hearts;</h1>
-        </div>
+            <h1>MY&hearts;</h1></div>
 
     </main>
 
